@@ -1,0 +1,14 @@
+
+#ifndef LUNAGEN_KERNEL_H_
+#define LUNAGEN_KERNEL_H_
+
+// common includes:
+// struct lua_Any;
+// int SIMCORE_EXPORT loadModuleFromMemory(void* data, const std::string& mname, const std::string& ename, lua_State* L);
+// int SIMCORE_EXPORT loadModuleFromMemory(lua_Any* dum1, lua_Any* dum2, lua_Any* dum3, lua_State* L);
+
+// extern "C" {
+// SIMCORE_EXPORT void RegisterGetMapGeomFnc(void* funcPtr);
+// }
+
+#endif
