@@ -1,9 +1,7 @@
 SET(TARGET_NAME "lunagen_kernel")
 
 INCLUDE_DIRECTORIES (../include)
-
-INCLUDE_DIRECTORIES(${LUNA_INC_DIR})
-LINK_DIRECTORIES (${LUNA_LIB_DIR})
+INCLUDE_DIRECTORIES(../../sgtLuna/include)
 
 ADD_DEFINITIONS(-DCXX_ENABLED)
 ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
@@ -12,7 +10,7 @@ FILE(GLOB_RECURSE PUBLIC_HEADERS "../include/*.h")
 
 FILE(GLOB_RECURSE SOURCE_FILES "*.cpp" )
 
-ADD_MSVC_PRECOMPILED_HEADER("scCommon.h" "scCommon.cpp" SOURCE_FILES)
+ADD_MSVC_PRECOMPILED_HEADER("kernel.h" "kernel.cpp" SOURCE_FILES)
 
 GENERATE_LUA_PACKAGE(SOURCE_FILES)
 
